mylang/tests/fail/9.pas
program
var i: int;
begin

i := 1;
case(i) of
    a: writeln(11)
    3: writeln(22)
end

end@

